[package]
name = "itchy-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "zstd",
] }
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
# magic incantations to produce speedier release builds
strip = "symbols"
lto = true
codegen-units = 1
